k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sana-lms-backend
  namespace: sana-lms
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.sanaplatform.kz
      secretName: sanalms-kz-tls
  rules:
    - host: api.sanaplatform.kz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sana-lms-backend
                port:
                  number: 80
